# hephaestus-fm

./: README.md  TODO.md  hephaestus-fm.cabal  package.yaml  stack.yaml
.stack-work/downloaded/: 3igKcIYhdeS4.http-archive
.stack-work/install/5600629f/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-A5jfd1yrmaY4DRMJuiquBp  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  free-4.12.4-C2gBQV0m8J42HxqSLTFyVx  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  kan-extensions-5.0.2-8LTJJ1zQJWB7SfewWXUuqX  lens-4.15.4-3P7PSyaTsWRLQnkSsAPtwp  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  profunctors-5.2.1-Ga89Nyw0d7LBEIoX4AZ6gT  reflection-2.1.2-Bem12O1xFGSHr4C2Hyu1c4  semigroupoids-5.2.1-Db8txM8kTsI6Y49CY6g5Jn  semigroups-0.18.3-5xL9BgkWQsCGwo6YahyMCM  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tagged-0.8.5-1mTloBSoUxv8dqUr8XBGBt  text-1.2.2.2-9UQZjEJZQFSGMffj1Z5g00  th-abstraction-0.2.5.0-IQJC3onXzKuCarhyL6pEOQ  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  unordered-containers-0.2.8.0-Bp9XgxjuHxcI4tFehVMDGC  vector-0.12.0.1-692PQMDMB6pIQ1uGwefDcQ  void-0.7.2-4PWwLjXxAER9U3zGpDhf6e
.stack-work/install/5600629f/pkgdb/: hephaestus-fm-0.1.0.0-BzoirjheX0ZB6OJEKgwIRT.conf  package.cache
.stack-work/install/x86_64-linux-nopie/lts-9.1/8.0.2/flag-cache/: StateVar-1.1.0.4-5dJbnTVECtEAhfJXPZKdbO  adjunctions-4.3-A5jfd1yrmaY4DRMJuiquBp  base-orphans-0.6-AbJ3lKVXygDCG0eeQEv8Iu  bifunctors-5.4.2-KcF2f75KyQm5BjgJ8WkHCw  boxes-0.1.4-8r7hgbHhiwZ9TYlQbo7ovB  cabal-doctest-1.0.2-7qDWi4QMBieCUnNAxkUwxe  comonad-5.0.2-Fq9Xy9jdx6uIyJZn00E6Yc  contravariant-1.4-29zF0Im431177ovfbHYCGv  distributive-0.5.3-IX4kyVcHAyoH4uFYrsjY1R  exceptions-0.8.3-ADEDRATtUrMK1JW4zMQ9U  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  free-4.12.4-C2gBQV0m8J42HxqSLTFyVx  hashable-1.2.6.1-2ZLNuHq395GGIHwEHuqZol  kan-extensions-5.0.2-8LTJJ1zQJWB7SfewWXUuqX  lens-4.15.4-3P7PSyaTsWRLQnkSsAPtwp  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  parallel-3.2.1.1-KQJHWCcq2Ka569Stb10nhx  prelude-extras-0.4.0.3-BhL9U5k7NtGJn1itwIHt2Y  pretty-tree-0.1.0.0-7RhTb2b9Ph41sRQAf3ofme  primitive-0.6.2.0-4578caNkWQ54Gt1mxLF2Yh  (+13 more)
app/: Main.hs
src/: Lib.hs  Main.hs  fm.ide
src/Data/: FM.hs  Main.hs  Operators.hs
src/Data/FM/: Expression.hs  ExpressionTest.hs  Feature.hs  FeatureModel.hs  FeatureModelTest.hs  ProductConfiguration.hs  SAT.hs  Tree.hs  Types.hs  Utils.hs
src/Parser/: Expression.hs  Grammar.hs  Main.hs  Operators.hs  Parsec.hs  Parser.hs  Transformers.hs  fm.ide  fm.xml
src/Parser/Clafer/: Main.hs  model-example.clafer
src/Parser/XML/: Constraints.hs  Main.hs  Parsec.hs  Struct.hs  Utils.hs  fm.1.xml  fm.ide
src/Test/FM/: ExpressionTest.hs  FeatureModelTest.hs  FeatureTest.hs  Main.hs  SATTest.hs  TreeTest.hs
test/: Spec.hs
test/Test/: Main.hs
test/Test/FM/: ExpressionTest.hs  FeatureModelTest.hs  ProductConfigurationTest.hs  TreeTest.hs
test/Test/Parser/: XMLTest.hs  fm.ide
test/modules/: ExpressionTest.hs
test/modules/FM/: ExpressionTest.hs  FeatureTest.hs  TreeTest.hs
(+5 files in other folders)
