name:                hephaestus-fm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hephaestus-pl/hephaestus-fm#readme
license:             BSD3
license-file:        LICENSE
author:              Rodrigo Bonifacio & Thiago Figueiredo
maintainer:          thiagofigueiredo777@gmail.com
copyright:           C&C
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib,
                       Data.FM.Feature,
                       Data.FM.Tree,
                       Data.FM.Expression,
                       Data.FM.FeatureModel,
                       Data.FM.SAT,
                       Data.FM.Utils
  build-depends:       base >= 4.7 && < 5,
                       pretty-tree,
                       lens,
                       containers,
                       HUnit
  default-language:    Haskell2010

executable hephaestus-fm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hephaestus-fm
  default-language:    Haskell2010

test-suite hephaestus-fm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  exposed-modules:     Test.FM.ExpressionTest,
                       Test.FM.FeatureTest,
                       Test.FM.TreeTest,
                       Test.FM.FeatureModelTest
  main-is:             Spec.hs
  build-depends:       base,
                       hephaestus-fm,
                       lens,
                       containers,
                       HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hephaestus-pl/hephaestus-fm
